# my-first-engine

./: CMakeLists.txt  README.md  cameraClass.h  glad.c  main.cpp
dataPlots/: performance_non_instanced1k.csv
hw1/: CMakeLists.txt
hw1/src/: main.cpp
hw2/: CMakeLists.txt  plotter.py
hw2/dataPlots/: performance_instanced100k.csv  performance_instanced10k.csv  performance_instanced1k.csv  performance_non_instanced100k.csv  performance_non_instanced_10k.csv
hw2/include/: cameraClass.h  main.h  model.h  performanceLog.h  timeClass.h
hw2/src/: cameraClass.cpp  main.cpp  model.cpp  timeClass.cpp
hw3/: CMakeLists.txt
hw3/include/: cameraClass.h  lights.h  model.h  performanceLog.h
hw3/shaders/lamp/: lampFragment.glsl
hw3/shaders/lightning/: lightningFragment.glsl  lightningVertex.glsl
hw3/src/: lights.cpp  main.cpp  model.cpp  performanceLog.cpp
hw4/: CMakeLists.txt
hw4/include/: lights.h  main.h  model.h  performanceLog.h  timeManager.h
hw4/shaders/depthShadow/: shadowDepth_vertex.glsl
hw4/shaders/lightning/: lightningFragment.glsl  lightningVertex.glsl
hw4/shaders/plane/: planeFragment.glsl
hw4/src/: camera.cpp  lights.cpp  main.cpp  model.cpp  shader.cpp
hw5/: CMakeLists.txt
hw5/include/: camera.h  hdrSystem.h  lights.h  main.h  model.h  pbrMaterial.h  renderSettings.h  scene.h
hw5/shaders/hdr/: hdr_fragment.glsl
hw5/shaders/lightning/: lightningFragment.glsl  lightningVertex.glsl
hw5/shaders/pbr/: pbr_fragment.glsl  pbr_vertex.glsl
hw5/src/: dithering.cpp  generateBayerTexture.cpp  hdrSystem.cpp  main.cpp  model.cpp  pbrMaterial.cpp  renderSettings.cpp  scene.cpp  timeManager.cpp
hw5/textures/cube/: cube.mtl
hw5/textures/vinyl/: vinyl.blend
include/: cameraClass.h  model.h  timeClass.h
include/glad/: glad.h
project/: CMakeLists.txt
project/include/: dithering.h  generateBayerTexture.h  main.h  scene.h  shader.h
project/shaders/depthShadow/: shadowDepth_vertex.glsl
project/shaders/instance/: instanceShader.glsl
project/shaders/lightning/: lightningFragment.glsl
project/src/: dithering.cpp  lights.cpp  main.cpp  scene.cpp
shaders/: fragment.glsl  fragmentShaderA.glsl  vertex.glsl
shaders/hw1_cube/: fragmentShaderB.glsl
shaders/plane/: planeVertex.glsl
src/: main.cpp  main2.cpp
